--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.28.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
